--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>What is the capital of India?</h2><br>
+    <div>
+        <input type="radio" id="NewDelhi" name="choose">
+        <label for="NewDelhi">New Delhi</label>
+    </div>
+    <div>
+        <input type="radio" id="Mumbai" name="choose">
+        <label for="Mumbai">Mumbai</label>
+    </div>
+    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi. </blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
